--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/secrets.yml
+/config/credentials.yml.enc
+/config/database.yml
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
